Login and Logout functionality completed

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://asfand:asfand1998@next-airbnb.mdaa0yc.mongodb.net/airbnb"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
