authentication completed with social login of google and github

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@
 
 DATABASE_URL="mongodb+srv://asfand:asfand1998@next-airbnb.mdaa0yc.mongodb.net/airbnb"
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=d817b2f2aad3431efa22
+GITHUB_SECRET=2b4ac17e4f8934fb516fc79ffd3a08cb4c1bee0b
+
+GOOGLE_CLIENT_ID=772857426340-l50ak58na9g2jvbsfqgshvjts1boede1.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
